# sogis-mysoch-auth

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
schemas/: sogis-mysoch-auth.json
src/: server.py
