[project]
name = "sogis-mysoch-auth"
version = "v2025.01.27"
description = "SOGIS my.so.ch Authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.3",
    "werkzeug~=3.0.6",
    "Flask-JWT-Extended~=4.7.1",
    "qwc-services-core~=1.3.35",
    "psycopg2~=2.9.10",
    "SQLAlchemy~=2.0.37",
    "jwcrypto~=1.5.6"
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
