[project]
name = "sogis-mysoch-auth"
version = "v2025.02.12"
description = "SOGIS my.so.ch Authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.1.0",
    "Werkzeug~=3.1.4",
    "Flask-JWT-Extended~=4.7.1",
    "qwc-services-core~=1.5.0",
    "psycopg2~=2.9.10",
    "SQLAlchemy~=2.0.37",
    "jwcrypto~=1.5.6"
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
